# ShopSmart-ProductComparison

./: .gitignore  README.md  background.js  comparison_output.md  content.js  main.py  popup.css  popup.html  popup.js  product_comparison.md  pyproject.toml  render.yaml  results.css  results.html
backend/: agent.py  api.py  auth.py  comparator.py  database.py  llm.py  models.py  profiler.py  questionnaire.py  scraper.py
extension/: auth.js  background.js  config.js  history.css  history.html  history.js  login.css  login.html  login.js  manifest.json  popup.html  popup.js  results.css  results.html  results.js
scripts/: smoke_tests.py
